--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,35 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
-@import 'node_modules/@angular/material/prebuilt-themes/indigo-pink';
+//@import 'node_modules/@angular/material/prebuilt-themes/indigo-pink';
 @import 'todo/todo-list.component';
-@import 'todo/todo-item.component';
+@import 'calculator/calculator.component';
 
 body {
     background-color: #eee;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+
 }
+
+@import '../node_modules/@angular/material/prebuilt-themes/indigo-pink';
+@import '../node_modules/@angular/material/theming';
+
+// Define a custom typography config that overrides the font-family as well as the
+// `headlines` and `body-1` levels.
+$custom-typography: mat-typography-config(
+  $font-family: 'Roboto "Helvetica Neue", sans-serif',
+  $headline: mat-typography-level(32px, 48px, 700),
+  $body-1: mat-typography-level(16px, 24px, 500),
+  $body-2: mat-typography-level(8px, 8px, 500),
+  $caption: mat-typography-level(8px, 8px, 500)
+);
+
+// Override typography CSS classes (e.g., mat-h1, mat-display-1, mat-typography, etc.).
+@include mat-base-typography($custom-typography);
+
+// Override typography for a specific Angular Material components.
+//@include mat-checkbox-typography($custom-typography);
+
+// Override typography for all Angular Material, including mat-base-typography and all components.
+@include angular-material-typography($custom-typography);
+
+// Override the typography in the core CSS.
+@include mat-core($custom-typography);
