--- a/src/calculator/calculator.component.html
+++ b/src/calculator/calculator.component.html
@@ -2,7 +2,7 @@
     <h1 class="main-title">Gebührenrechner</h1>
     <mat-card class="center-card">
         <mat-form-field>
-            <input matInput placeholder="Jahresumsatz" [(ngModel)]="calculatorModel.amount" (keyup)="onKeyUp($event)">
+            <input matInput placeholder="Jahresumsatz" [(ngModel)]="amount" (keyup)="onKeyUp($event)">
         </mat-form-field>
 
     </mat-card>
@@ -12,7 +12,7 @@
 
             <mat-selection-list #options>
                 <mat-list-option *ngFor="let option of calculatorOptions"
-                                 (selectionChange)="option.checked=$event.selected; onListOptionChange()">
+                                 (selectionChange)="option.checked=$event.selected; onListOptionChanged()">
 
                     <p matLine>
                         <span>{{option.name}}</span>
